--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# AWS S3 Configuration
+aws.s3.region=${AWS_REGION}
+aws.s3.access-key=${AWS_ACCESS_KEY}
+aws.s3.secret-key=${AWS_SECRET_KEY}
+aws.s3.bucket-name=${AWS_BUCKET_NAME}
