--- a/api/pom.xml
+++ b/api/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>s3</artifactId>
 			<version>2.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
