--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -10,3 +10,6 @@ aws.s3.region=${AWS_REGION}
 aws.s3.access-key=${AWS_ACCESS_KEY}
 aws.s3.secret-key=${AWS_SECRET_KEY}
 aws.s3.bucket-name=${AWS_BUCKET_NAME}
+
+# Supabase JWT Secret for Spring Security
+supabase.jwt.secret=${JWT_SECRET}
