Add SQS service for photo processing and update AlbumController to enqueue photos

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -13,3 +13,6 @@ aws.s3.bucket-name=${AWS_BUCKET_NAME}
 
 # Supabase
 supabase.jwks.url=${SUPABASE_VERIFY}
+
+# AWS SQS
+aws.sqs.queue-url=${AWS_SQS_URL}
