feat: implement rate limiting and security enhancements in API, add CORS configuration, and update application properties for production

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,3 +16,31 @@ supabase.jwks.url=${SUPABASE_VERIFY}
 
 # AWS SQS
 aws.sqs.queue-url=${AWS_SQS_URL}
+
+# --- Production Security ---
+# Max request body size (10 MB - blocks oversized payloads)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-http-form-post-size=10485760
+server.tomcat.max-swallow-size=10485760
+
+# Hide stack traces from API responses
+server.error.include-stacktrace=never
+server.error.include-message=never
+server.error.include-binding-errors=never
+server.error.include-exception=false
+
+# Connection pool limits (prevent connection exhaustion)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.idle-timeout=300000
+
+# Tomcat thread limits (prevent thread exhaustion DDoS)
+server.tomcat.threads.max=100
+server.tomcat.threads.min-spare=5
+server.tomcat.connection-timeout=10000
+
+# Disable unnecessary server info
+server.server-header=
+server.tomcat.accesslog.enabled=false
