--- a/api/pom.xml
+++ b/api/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>sqs</artifactId>
 			<version>2.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.bucket4j</groupId>
+			<artifactId>bucket4j_jdk17-core</artifactId>
+			<version>8.14.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
