--- a/grab-pic-web/package.json
+++ b/grab-pic-web/package.json
@@ -15,6 +15,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
+    "qrcode.react": "^4.2.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
