--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,6 +16,7 @@ supabase.jwks.url=${SUPABASE_VERIFY}
 
 # AWS SQS
 aws.sqs.queue-url=${AWS_SQS_URL}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # --- Production Security ---
 # Max request body size (10 MB - blocks oversized payloads)
