feat: configure dynamic server ports for API and AI services

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=api
+server.port=${PORT:8080}
+
+# Database
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:validate}
 
 # AWS S3 Configuration
 aws.s3.region=${AWS_REGION}
