feat: implement Redis-backed rate limiting and update application properties for Redis configuration

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -19,6 +19,12 @@ supabase.jwks.url=${SUPABASE_VERIFY}
 
 # AWS SQS
 aws.sqs.queue-url=${AWS_SQS_URL}
+
+spring.data.redis.url=${REDIS_URL:redis://localhost:6379}
+spring.data.redis.ssl.enabled=${REDIS_SSL:false}
+spring.data.redis.timeout=500ms
+spring.data.redis.lettuce.shutdown-timeout=200ms
+
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # --- Production Security ---
