--- a/api/pom.xml
+++ b/api/pom.xml
@@ -88,9 +88,8 @@
 			<version>2.20.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.bucket4j</groupId>
-			<artifactId>bucket4j_jdk17-core</artifactId>
-			<version>8.14.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 
