feat: add RequestBodySizeLimitFilter to enforce JSON body size limit and update application properties

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -28,7 +28,8 @@ spring.data.redis.lettuce.shutdown-timeout=200ms
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # --- Production Security ---
-# Max request body size (10 MB - blocks oversized payloads)
+# Multipart upload limits (10 MB).  JSON body limit (512 KB) is enforced
+# by RequestBodySizeLimitFilter so raw JSON can't exhaust memory.
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-http-form-post-size=10485760
