feat: integrate Cloudflare Turnstile for bot protection in album creation and dashboard pages

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.data.redis.ssl.enabled=${REDIS_SSL:false}
 spring.data.redis.timeout=500ms
 spring.data.redis.lettuce.shutdown-timeout=200ms
 
+# Cloudflare Turnstile (bot protection)
+turnstile.secret=${TURNSTILE_SECRET:}
+
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # --- Production Security ---
