feat: add JWT issuer configuration for Supabase in SecurityConfig and application.properties

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,6 +16,7 @@ aws.s3.bucket-name=${AWS_BUCKET_NAME}
 
 # Supabase
 supabase.jwks.url=${SUPABASE_VERIFY}
+supabase.jwt.issuer=${SUPABASE_JWT_ISSUER}
 
 # AWS SQS
 aws.sqs.queue-url=${AWS_SQS_URL}
