feat: implement image dimension validation to prevent decompression bombs

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -59,3 +59,10 @@ server.tomcat.connection-timeout=10000
 # Disable unnecessary server info
 server.server-header=
 server.tomcat.accesslog.enabled=false
+
+# Trusted proxy headers — Tomcat's RemoteIpValve walks X-Forwarded-For
+# right-to-left, stripping internal-proxy IPs.  request.getRemoteAddr()
+# then returns the real client IP, immune to header spoofing.
+server.forward-headers-strategy=NATIVE
+server.tomcat.remoteip.remote-ip-header=X-Forwarded-For
+server.tomcat.remoteip.protocol-header=X-Forwarded-Proto
