--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -14,6 +14,11 @@ aws.s3.access-key=${AWS_ACCESS_KEY}
 aws.s3.secret-key=${AWS_SECRET_KEY}
 aws.s3.bucket-name=${AWS_BUCKET_NAME}
 
+# AWS CloudFront (CDN for image viewing — cheaper egress + edge caching)
+aws.cloudfront.domain=${CLOUDFRONT_DOMAIN:}
+aws.cloudfront.key-pair-id=${CLOUDFRONT_KEY_PAIR_ID:}
+aws.cloudfront.private-key-string=${CLOUDFRONT_PRIVATE_KEY_STRING:}
+
 # Supabase
 supabase.jwks.url=${SUPABASE_VERIFY}
 supabase.jwt.issuer=${SUPABASE_JWT_ISSUER}
