feat: implement Turnstile bot protection for upload and search endpoints, enhancing security measures

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.data.redis.timeout=500ms
 spring.data.redis.lettuce.shutdown-timeout=200ms
 
 turnstile.secret=${TURNSTILE_SECRET:}
+turnstile.allowed-hostnames=${TURNSTILE_ALLOWED_HOSTNAMES:}
 
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
